Make string operations locale-independent in clustercontroller
Add explicit Locale.ROOT parameter to String.format() calls and
toLowerCase() operations throughout the clustercontroller module.
This ensures consistent string formatting and case conversion
behavior regardless of the system's default locale.